tests/golden/3-basic-and-simple-literals/invalid/common/bad-explicit-null-literal-2.yini
^ ExplicitNulls
val1 = NIL
